grid column gap fix

--- a/css/components/clients-feedback.css
+++ b/css/components/clients-feedback.css
@@ -21,7 +21,7 @@ h4 {
    background-color: lightblue;
 }
 .row.clients-feedback {
-    column-gap: 10px;
+    column-gap: 30px;
     row-gap: 5px;
 }
     div.row.clients-feedback-main {
@@ -72,4 +72,6 @@ h4 {
                 display: inline-block;
                 width: 100%;
                 height: 49%;
+                text-align: center;
+                padding-top: 30px;
             }
